@@ -110,6 +110,7 @@ DEFINE_ENUM(EMasterReign,
     ((TransferQuota)                                                (1319))  // kiselyovp
     ((RenameTransferQuota)                                          (1320))  // kiselyovp
     ((YT_13015_CorrectSrcTxForCrossShardCopy)                       (1321))  // shakurov
+    ((SubjectAliases)                                               (1322))  // s-v-m
 );
 
 ////////////////////////////////////////////////////////////////////////////////
